updated book store

--- a/SelahSeries/Views/BookMgt/Index.cshtml
+++ b/SelahSeries/Views/BookMgt/Index.cshtml
@@ -90,7 +90,7 @@
                     @Html.DisplayFor(modelItem => item.IsHardBook)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Price)
+                    ₦ @Html.DisplayFor(modelItem => item.Price)
                 </td>
             </tr>
         }
