--- a/SelahSeries/Views/Books/Checkout.cshtml
+++ b/SelahSeries/Views/Books/Checkout.cshtml
@@ -8,3 +8,136 @@
 }
 
 
+    <div class="table-responsive">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Book</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Total</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <div class="media">
+                            <div class="d-flex">
+                                <img src="img/product/single-product/cart-1.jpg"
+                                     alt="" />
+                            </div>
+                            <div class="media-body">
+                                <p>Minimalistic shop</p>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                        <h5>$360.00</h5>
+                    </td>
+                    <td>
+                        <div class="product_count">
+                            <input type="text"
+                                   name="qty"
+                                   id="sst"
+                                   maxlength="12"
+                                   value="1"
+                                   title="Quantity:"
+                                   class="input-text qty" />
+                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
+                                    class="increase items-count"
+                                    type="button">
+                                <i class="lnr lnr-chevron-up"></i>
+                            </button>
+                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
+                                    class="reduced items-count"
+                                    type="button">
+                                <i class="lnr lnr-chevron-down"></i>
+                            </button>
+                        </div>
+                    </td>
+                    <td>
+                        <h5>$720.00</h5>
+                    </td>
+                </tr>
+                <tr class="bottom_button">
+                    <td>
+                        <a class="gray_btn" href="#">Update Cart</a>
+                    </td>
+                    @*<td></td>
+                    <td></td>
+                    <td>
+                        <div class="cupon_text">
+                            <input type="text" placeholder="Coupon Code" />
+                            <a class="main_btn" href="#">Apply</a>
+                            <a class="gray_btn" href="#">Close Coupon</a>
+                        </div>
+                    </td>*@
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>
+                        <h5>Subtotal</h5>
+                    </td>
+                    <td>
+                        <h5>$2160.00</h5>
+                    </td>
+                    <td></td>
+                </tr>
+
+                <tr class="shipping_area">
+                    <td></td>
+                    <td>
+                        <h5>Shipping</h5>
+                    </td>
+                    <td>
+                        <div class="shipping_box">
+                            <ul class="list">
+                             
+                                <li class="active">
+                                    <a href="#">Local Delivery: $2.00</a>
+                                </li>
+
+                            </ul>
+                            <h6>
+                                Calculate Shipping
+                                <i class="fa fa-caret-down" aria-hidden="true"></i>
+                            </h6>
+                            <select class="shipping_select">
+                                <option value="1">Nigeria</option>
+                            </select>
+                            <select class="shipping_select">
+                                <option value="0">Select a City</option>
+                                <option value="1">Ile-Ife</option>
+                                <option value="4">Ilesha</option>
+                                <option value="4">Ibadan</option>
+                            </select>
+                            @*<input type="text" placeholder="Postcode/Zipcode" />*@
+                            <div>
+                                <a class="gray_btn" href="#">Update Details</a>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><h5>Total (plus shipping fee)</h5></td>
+                    <td>$500</td>
+                    <td></td>
+                </tr>
+
+                <tr class="out_button_area">
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td>
+                        <div class="checkout_btn_inner">
+                            <a class="gray_btn" href="~/Books/Index">Continue Shopping</a>
+                            <button type="button" data-toggle="modal" data-target="#checkout">
+                                <a class="main_btn" href="#">Proceed to checkout</a>
+                            </button>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
