--- a/SelahSeries/wwwroot/NewFolder2/shop/css/style.css
+++ b/SelahSeries/wwwroot/NewFolder2/shop/css/style.css
@@ -2008,7 +2008,7 @@
      color: #666;
 }
  .why-text.full-width h5{
-     color: #fffff7;
+     color: #ad001c;
      font-weight: 700;
 }
  .why-text.full-width p{
