--- a/SelahSeries/Views/BookMgt/Create.cshtml
+++ b/SelahSeries/Views/BookMgt/Create.cshtml
@@ -101,8 +101,15 @@
                     <span style="color:blue;" data-fileValue> </span>
                     <input type="file" data-fileSelector style="visibility:hidden" accept="image/*" asp-for="BookPhoto" />
                 </div>
-
             </div>
+            @*<div class="form-group">
+                <button type="button" class="collapsible"> Upload Book Soft Copy</button>
+                <div class="content">
+                    <a data-mockFile style="color:white;" class=" btn btn-primary"> Upload Book </a>
+                    <span style="color:blue;" data-fileValue> </span>
+                    <input type="file" data-fileSelector style="visibility:hidden" accept=".doc, .pdf" asp-for="BookUpload" />
+                </div>
+            </div>*@
             <div class="form-group">
                 <button type="button" class="collapsible">Hard Book Available?</button>
                 <div class="content">
