--- a/SelahSeries/Views/BookMgt/Edit.cshtml
+++ b/SelahSeries/Views/BookMgt/Edit.cshtml
@@ -67,77 +67,85 @@
         @await Html.PartialAsync("AlertViewPartial")
         @using (Html.BeginForm("Edit", "BookMgt", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <input type="hidden" asp-for="BookId" />
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <input type="hidden" asp-for="ImageUrl" />
-        <div class="form-group">
-            <button type="button" class="collapsible">Enter author's name</button>
-            <div class="content">
-                <input asp-for="Author" class="form-control" />
-                <span asp-validation-for="Author" class="text-danger"></span>
-            </div>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="BookId" />
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="ImageUrl" />
+            <div class="form-group">
+                <button type="button" class="collapsible">Enter author's name</button>
+                <div class="content">
+                    <input asp-for="Author" class="form-control" />
+                    <span asp-validation-for="Author" class="text-danger"></span>
+                </div>
 
 
-        </div>
-        <div class="form-group">
-            <button type="button" class="collapsible">Enter book title</button>
-            <div class="content">
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
             </div>
-        </div>
-
-        <div class="form-group">
-            <button type="button" class="collapsible">Book Description</button>
-            <div class="content">
-                <span asp-validation-for="Description" class="text-danger"></span>
-                <textarea asp-for="Description" id="contentEditor" style="width: 100%; height: 200px; display: none;">  </textarea>
-            </div>
-        </div>
-        <div class="form-group">
-            <button type="button" class="collapsible"> Upload Book cover Image</button>
-            <div class="content">
-                <a data-mockFile style="color:white;" class=" btn btn-primary"> Select Image </a>
-                <span style="color:blue;" data-fileValue> </span>
-                <input type="file" asp-for="BookPhoto" data-fileSelector style="visibility:hidden" accept="image/*" />
-            </div>
-
-        </div>
-        <div class="form-group">
-            <button type="button" class="collapsible">Hard Book Available?</button>
-            <div class="content">
-                <div class="checkbox">
-                    <label>
-                        Hard book sale <input asp-for="IsHardBook" />
-                    </label>
-                    <div>
-                        <label>
-                            Enter Price <input asp-for="Price" />
-                        </label>
-                    </div>
+            <div class="form-group">
+                <button type="button" class="collapsible">Enter book title</button>
+                <div class="content">
+                    <input asp-for="Title" class="form-control" />
+                    <span asp-validation-for="Title" class="text-danger"></span>
                 </div>
             </div>
 
-        </div>
+            <div class="form-group">
+                <button type="button" class="collapsible">Book Description</button>
+                <div class="content">
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                    <textarea asp-for="Description" id="contentEditor" style="width: 100%; height: 200px; display: none;">  </textarea>
+                </div>
+            </div>
+            <div class="form-group">
+                <button type="button" class="collapsible"> Upload Book cover Image</button>
+                <div class="content">
+                    <a data-mockFile style="color:white;" class=" btn btn-primary"> Select Image </a>
+                    <span style="color:blue;" data-fileValue> </span>
+                    <input type="file" asp-for="BookPhoto" data-fileSelector style="visibility:hidden" accept="image/*" />
+                </div>
 
-        <div class="form-group">
-            <button type="button" class="collapsible"> Select Category</button>
-            <div class="content">
-                <select asp-for="CategoryId" class="form-Control">
-                    <option value=1>Sports</option>
-                    <option value=2>Politics</option>
-                    <option value=3>Relationship and Marriage</option>
-                    <option value=4>Career</option>
-                    <option value=5>General</option>
-                </select>
-                <span asp-validation-for="CategoryId" class="text-danger"></span>
+            </div>
+            @*<div class="form-group">
+                <button type="button" class="collapsible"> Upload Book Soft Copy</button>
+                <div class="content">
+                    <a data-mockFile style="color:white;" class=" btn btn-primary"> Upload Book </a>
+                    <span style="color:blue;" data-fileValue> </span>
+                    <input type="file" data-fileSelector style="visibility:hidden" accept=".doc, .docx,.ppt, .pptx,.pdf" asp-for="BookUpload" />
+                </div>
+            </div>*@
+            <div class="form-group">
+                <button type="button" class="collapsible">Hard Book Available?</button>
+                <div class="content">
+                    <div class="checkbox">
+                        <label>
+                            Hard book sale <input asp-for="IsHardBook" />
+                        </label>
+                        <div>
+                            <label>
+                                Enter Price <input asp-for="Price" />
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
-        </div>
-        <div style="text-align: center;" class="form-group">
-            <input type="submit" value="Save Changes" class="btn btn-danger btn-lg" />
-        </div>
+            <div class="form-group">
+                <button type="button" class="collapsible"> Select Category</button>
+                <div class="content">
+                    <select asp-for="CategoryId" class="form-Control">
+                        <option value=1>Sports</option>
+                        <option value=2>Politics</option>
+                        <option value=3>Relationship and Marriage</option>
+                        <option value=4>Career</option>
+                        <option value=5>General</option>
+                    </select>
+                    <span asp-validation-for="CategoryId" class="text-danger"></span>
+                </div>
+
+            </div>
+            <div style="text-align: center;" class="form-group">
+                <input type="submit" value="Save Changes" class="btn btn-danger btn-lg" />
+            </div>
         }
     </div>
     <div class="col-lg-1"></div>
