--- a/SelahSeries/Views/Home/Index.cshtml
+++ b/SelahSeries/Views/Home/Index.cshtml
@@ -33,6 +33,7 @@
 @section AddToEnd {
     <script src="~/NewFolder2/plugins/masonry/images_loaded.js"></script>
     <script src="~/NewFolder2/js/custom.js"></script>
+    <script src="~/NewFolder2/shop/js/bookstore.js"></script>
 }
 
 <div id="carouselExampleIndicators" class="home carousel slide" style="margin: 0px; padding:0px" data-ride="carousel">
@@ -225,26 +226,26 @@
 
 
                                 @foreach (var item in latestArticle)
-        {
+                                {
 
-            <div class="card card_default card_small_with_image grid-item">
-                <img class="card-img-top" src='~/Uploads/@Html.DisplayFor(modelItem => item.TitleImageUrl)' alt="https://unsplash.com/">
-                <div class="card-body">
-                    <div class="card-title card-title-small"><a href="~/blog/post/@Html.DisplayFor(modelItem => item.PostId)">@Html.DisplayFor(modelItem => item.Title)</a></div>
-                    <small class="post_meta"><a href="#">@Html.DisplayFor(modelItem => item.Author)</a><span>@Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
-                </div>
-            </div>
-
-
-        }
+                                    <div class="card card_default card_small_with_image grid-item">
+                                        <img class="card-img-top" src='~/Uploads/@Html.DisplayFor(modelItem => item.TitleImageUrl)' alt="https://unsplash.com/">
+                                        <div class="card-body">
+                                            <div class="card-title card-title-small"><a href="~/blog/post/@Html.DisplayFor(modelItem => item.PostId)">@Html.DisplayFor(modelItem => item.Title)</a></div>
+                                            <small class="post_meta"><a href="#">@Html.DisplayFor(modelItem => item.Author)</a><span>@Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
+                                        </div>
+                                    </div>
 
 
+                                }
 
 
 
 
 
-                           
+
+
+
 
 
 
@@ -269,7 +270,7 @@
                                         <li class="page-item btnn0 active "><a href="~/@item?category=@category#blog" class="page-link waves-effect waves-effect">@item</a></li>
                                     }
                                 }
-                                
+
                                 <li class="page-item btnn0">
                                     <a href="~/@next?category=@category#blog" class="page-link waves-effect waves-effect" aria-label="Next">
                                         <span aria-hidden="true">»</span>
@@ -367,6 +368,38 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 											</svg>
                                     </div>
                                     <ul id="custom_dots" class="custom_dots custom_dots_vid">
@@ -409,6 +442,38 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 											</svg>
                                     </div>
                                 </div>
@@ -420,7 +485,7 @@
                             <div class="sidebar_slider_container">
                                 <div class="owl-carousel owl-theme sidebar_slider_vid">
 
-                                  
+
 
                                 </div>
                             </div>
@@ -474,12 +539,37 @@
                     <!-- Wrapper for carousel items -->
 
                     <div class="carousel-inner">
-                     
-                            <div class="item carousel-item active">
-                                <div class="row">
-                                    @foreach (var item in Books_Slide1)
-                                    {
-                                        <div class="col-sm-6">
+
+                        <div class="item carousel-item active">
+                            <div class="row">
+                                @foreach (var item in Books_Slide1)
+                                {
+                                    <div class="col-sm-6">
+                                        <div class="thumb-wrapper">
+                                            <div class="img-box">
+                                                <img src="~/Uploads/@Html.DisplayFor(modelItem => item.ImageUrl)" class="img-responsive img-fluid" alt="">
+                                            </div>
+                                            <div class="thumb-content">
+                                                <h5 style="color:black">@item.Title</h5>
+                                                @if (item.IsHardBook == true)
+                                                {
+                                                <p class="item-price">₦@item.Price</p>
+                                                    <a class="add-cart cart btn btn-primary">Add to Cart</a>
+                                                }
+                                                <a href="#" class="btn btn-primary">Download</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                }
+                            </div>
+                        </div>
+
+
+                        @*@foreach (var item in Books_Slide2)
+                            {
+                                <div class="item carousel-item">
+                                    <div class="row">
+                                        <div class="col-sm-4">
                                             <div class="thumb-wrapper">
                                                 <div class="img-box">
                                                     <img src="~/Uploads/@Html.DisplayFor(modelItem => item.ImageUrl)" class="img-responsive img-fluid" alt="">
@@ -495,57 +585,32 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    }
                                     </div>
-                            </div>
-                        
-
-                        @*@foreach (var item in Books_Slide2)
-                        {
-                            <div class="item carousel-item">
-                                <div class="row">
-                                    <div class="col-sm-4">
-                                        <div class="thumb-wrapper">
-                                            <div class="img-box">
-                                                <img src="~/Uploads/@Html.DisplayFor(modelItem => item.ImageUrl)" class="img-responsive img-fluid" alt="">
-                                            </div>
-                                            <div class="thumb-content">
-                                                <h5 style="color:black">@item.Title</h5>
-                                                @if (item.IsHardBook == true)
-                                                {
-                                                    <p class="item-price">@item.Price</p>
-                                                    <a href="#" class="btn btn-primary">Add to Cart</a>
-                                                }
-                                                <a href="#" class="btn btn-primary">Download</a>
+                                </div>
+                            }
+                            @foreach (var item in Books_Slide3)
+                            {
+                                <div class="item carousel-item">
+                                    <div class="row">
+                                        <div class="col-sm-4">
+                                            <div class="thumb-wrapper">
+                                                <div class="img-box">
+                                                    <img src="~/Uploads/@Html.DisplayFor(modelItem => item.ImageUrl)" class="img-responsive img-fluid" alt="">
+                                                </div>
+                                                <div class="thumb-content">
+                                                    <h5 style="color:black">@item.Title</h5>
+                                                    @if (item.IsHardBook == true)
+                                                    {
+                                                        <p class="item-price">@item.Price</p>
+                                                        <a href="#" class="btn btn-primary">Add to Cart</a>
+                                                    }
+                                                    <a href="#" class="btn btn-primary">Download</a>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        }
-                        @foreach (var item in Books_Slide3)
-                        {
-                            <div class="item carousel-item">
-                                <div class="row">
-                                    <div class="col-sm-4">
-                                        <div class="thumb-wrapper">
-                                            <div class="img-box">
-                                                <img src="~/Uploads/@Html.DisplayFor(modelItem => item.ImageUrl)" class="img-responsive img-fluid" alt="">
-                                            </div>
-                                            <div class="thumb-content">
-                                                <h5 style="color:black">@item.Title</h5>
-                                                @if (item.IsHardBook == true)
-                                                {
-                                                    <p class="item-price">@item.Price</p>
-                                                    <a href="#" class="btn btn-primary">Add to Cart</a>
-                                                }
-                                                <a href="#" class="btn btn-primary">Download</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        }*@
+                            }*@
                     </div>
                     <!-- Carousel controls -->
                     <a class="carousel-control left carousel-control-prev" href="#myCarousel" data-slide="prev">
@@ -557,7 +622,7 @@
                 </div>
                 <div class="load_more">
                     <div id="load_more" class="load_more_button text-center trans_200">
-                        <a href="~Books/Index">Go to BookStore</a>
+                        <a href="~/Books/Index">Go to BookStore</a>
                     </div>
                 </div>
             </div>
@@ -644,43 +709,48 @@
     ul > li {
         display: block;
     }
-     ul > li .all {
-        display: none;
-    }
 
-      ul > li .first {
+        ul > li .all {
             display: none;
         }
+
+        ul > li .first {
+            display: none;
+        }
+
         ul > li .second {
             display: none;
         }
+
         ul > li .third {
             display: none;
         }
+
         ul > li .fourth {
             display: none;
         }
+
         ul > li .fifth {
             display: block;
         }
 
-    .category{
+    .category {
         display: none;
     }
 
-    .more{
-        display:block;
+    .more {
+        display: block;
     }
 </style>
 
-<script>
-  
-     
-        $(function () {
-            $('nav a[href="/' + location.href.split("/")[3] + '"]').addClass('active');
-           
-        });
-        
-    
+@*<script>
 
-</script>
+
+    $(function () {
+        $('nav a[href="/' + location.href.split("/")[3] + '"]').addClass('active');
+
+    });
+
+
+
+</script>*@
