--- a/SelahSeries/Views/Home/Contact.cshtml
+++ b/SelahSeries/Views/Home/Contact.cshtml
@@ -16,7 +16,7 @@
 
 
 <div>
-    <div class="home_background parallax-window site-blocks-cover overlay" data-parallax="scroll" style="background-image:url(/NewFolder2/new/priscilla-du-preez-glDterhfzKw-unsplash.jpg)" data-speed="0.8"></div>
+    <div class="site-blocks-cover overlay" style="background-image:url(/NewFolder2/new/priscilla-du-preez-glDterhfzKw-unsplash.jpg)"></div>
 
     <div class="home_content">
         <div class="container">
