--- a/SelahSeries/Views/BookMgt/Create.cshtml
+++ b/SelahSeries/Views/BookMgt/Create.cshtml
@@ -89,7 +89,7 @@
             </div>
             <div class="form-group">
                 <button type="button" class="collapsible">Book Description</button>
-                <div class="content" style="max-height:max-content">
+                <div class="content">
                     <span asp-validation-for="Description" class="text-danger"></span>
                     <textarea asp-for="Description" class="form-control" style="width: 100%; height: 200px"></textarea>
                 </div>
@@ -102,14 +102,14 @@
                     <input type="file" data-fileSelector style="visibility:hidden" accept="image/*" asp-for="BookPhoto" />
                 </div>
             </div>
-            @*<div class="form-group">
+            <div class="form-group">
                 <button type="button" class="collapsible"> Upload Book Soft Copy</button>
                 <div class="content">
                     <a data-mockFile style="color:white;" class=" btn btn-primary"> Upload Book </a>
                     <span style="color:blue;" data-fileValue> </span>
                     <input type="file" data-fileSelector style="visibility:hidden" accept=".doc, .pdf" asp-for="BookUpload" />
                 </div>
-            </div>*@
+            </div>
             <div class="form-group">
                 <button type="button" class="collapsible">Hard Book Available?</button>
                 <div class="content">
