--- a/SelahSeries/Views/Books/Index.cshtml
+++ b/SelahSeries/Views/Books/Index.cshtml
@@ -159,7 +159,7 @@
                                                 {
                                                 <h5 id="pricee">₦@item.Price</h5>
                                                 }
-                                                <a class="btn hvr-hover download_btn" href="#">Download</a>
+                                                <a class="btn hvr-hover download_btn" href="~/Uploads/@item.BookUrl" download>Download</a>
                                             </div>
                                         </div>
 
@@ -208,7 +208,7 @@
                                                     {
                                                         <a class="add-cart cart btn hvr-hover" >Add to Cart</a>
                                                     }
-                                                    <a class="btn hvr-hover" href="#">Free Download</a>
+                                                    <a class="btn hvr-hover" href="~/uploads/@item.BookUrl" download>Free Download</a>
                                                 </div>
                                             </div>
                                         </div>
