--- a/SelahSeries/Views/Shared/_Layout.cshtml
+++ b/SelahSeries/Views/Shared/_Layout.cshtml
@@ -62,11 +62,20 @@
                                 @await Html.PartialAsync("SearchPartial")
                                 <ul style="font-family:'Ubuntu', sans-serif" class="navbar-nav ml-auto topnav">
 
+                                    @{ 
+                                        var currentRoute = Context.Request.Path;
+                                        var homeLinks = new List<string>{ "home/index", "/", "home" };
+                                        var homeLink = homeLinks.Any(x => x.Contains(currentRoute.ToString().ToLower()));
+                                        var aboutLink = currentRoute.ToString().Contains("About", StringComparison.OrdinalIgnoreCase);
+                                        var supportLink = currentRoute.ToString().Contains("Support", StringComparison.OrdinalIgnoreCase);
+                                        var contactLink = currentRoute.ToString().Contains("Contact", StringComparison.OrdinalIgnoreCase);
+                                        var bookLink = currentRoute.ToString().Contains("book", StringComparison.OrdinalIgnoreCase);
 
-                                    <li class="nav-item">
+                                            }
+                                    <li class="nav-item @(homeLink? "active" : "") ">
                                         <a class="nav-link" href="~/Home/Index">Home <span class="sr-only">(current)</span></a>
                                     </li>
-                                    <li class="nav-item">
+                                    <li class="nav-item  @(aboutLink? "active" : "")">
                                         <a class="nav-link" href="~/About">About</a>
                                     </li>
                                     <li class="nav-item dropdown">
@@ -82,7 +91,7 @@
                                             <a class="dropdown-item" href="~/?category=general#blog">General</a>
                                         </div>
                                     </li>
-                                    <li class="nav-item dropdown">
+                                    <li class="nav-item dropdown  @(supportLink? "active" : "")">
                                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             Support/Counselling
                                         </a>
@@ -91,11 +100,11 @@
                                             <a class="dropdown-item" href="~/Support/Send_Message">Send Message</a>
                                         </div>
                                     </li>
-                                    <li class="nav-item">
+                                    <li class="nav-item  @(bookLink? "active" : "")">
                                         <a class="nav-link" href="~/Books/Index">Books</a>
                                     </li>
 
-                                    <li class="nav-item">
+                                    <li class="nav-item  @(contactLink? "active" : "")">
                                         <a class="nav-link" href="~/Contact">Contact</a>
                                     </li>
                                     <li class="nav-item">
@@ -107,7 +116,7 @@
 
 
                         </nav>
-                       
+
                     @*</div>*@
                 </div>
             </div>
