--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -152,7 +152,7 @@
                                 European Society of Contraception and Reproductive Health.
                             </p>
                             <p class="indent" style="text-align:justify; color: black; line-height: 1.7">
-                                I gave my life to Christ when I was 10 year old and I had some struggles especially with my
+                                I gave my life to Christ when I was 10 years old and I had some struggles especially with my
                                 parents because I was considered to be a “religious extremist” but the fire kept burning despite
                                 all odds.
                             </p>
