--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -115,8 +115,8 @@
 
                 <img src="/NewFolder2/new/brigitte-tohm-XyGeWTj2E7w-unsplash.jpg" alt="Avatar">
                 <div class="container2">
-                    <h4>Interested in articles on Relationship and Marriage?</h4>
-                    <p><a href="~/?category=relationship_and_marriage#blog">See here</a></p>
+                    <h4>Check out our articles on Relationship and Marriage</h4>
+                    @* <p><a href="~/?category=relationship_and_marriage#blog">See here</a></p> *@
                 </div>
             </div>
 
@@ -126,8 +126,8 @@
             <div class="card2">
                 <img src="/NewFolder2/new/kakudmi-JO19K0HDDXI-unsplash (1).jpg" alt="Avatar">
                 <div class="container2">
-                    <h4>Need latest news on sports?</h4>
-                    <p><a href="~/?category=sports#blog">See here</a></p>
+                    <h4>Get entertained with news on Football</h4>
+                    @* <p><a href="~/?category=sports#blog">See here</a></p> *@
                 </div>
             </div>
 
@@ -139,8 +139,8 @@
 
                 <img src="/NewFolder2/new/jacalyn-beales-geRpPjIiu8U-unsplash.jpg" alt="Avatar ">
                 <div class="container2">
-                    <h4>Do you want to read about having a fulfilling career?</h4>
-                    <p><a href="~/?category=career#blog">See here</a></p>
+                    <h4>Our Career articles provide you interesting contents on career</h4>
+                    @* <p><a href="~/?category=career#blog">See here</a></p> *@
                 </div>
             </div>
 
@@ -152,8 +152,8 @@
             <div class="card2">
                 <img src="/NewFolder2/new/lucia-48UaeIMNAA4-unsplash (2).jpg" alt="Avatar">
                 <div class="container2">
-                    <h4>Are you interested in politics?</h4>
-                    <p><a href="~/?category=politics#blog">See here</a></p>
+                    <h4>A lover of politics? We have related articles for you.</h4>
+                    @* <p><a href="~/?category=politics#blog">See here</a></p> *@
                 </div>
             </div>
 
